@@ -89,10 +89,11 @@ BA  22- [libpari] F2xn_red, F2xn_inv, F2xX_to_F2xC, F2xXV_to_F2xM
 HC  23- direct formulas for quadratic Dirichlet L-functions at integers
     24- new GP functions: eulerfrac, eulerpol, eulervec
     25- [libpari] lfunquadneg
-BA  26- [libpari] vecvecsmall_sort_inplace, Flx_Fl_sub
+BA  26- [libpari] vecvecsmall_sort_inplace
 BA  27- [libpari] groupelts_quotient, quotient_groupelts, groupelts_to_group
     28- new GP functions mscosets, msfarey
     29- new GP function ellpadiclambdamu
+BA  30- [libpari] Flx_Fl_sub, Flx_is_totally_split
 
   Removed
      1- obsolete function rootsof1_kannan: use nfrootsof1
